@@ -14,7 +14,7 @@ mathsincludedir = $(pkgincludedir)/maths
 
 noinst_LTLIBRARIES = libmaths.la
 
-libmaths_la_SOURCES = approx.cpp matrixops.cpp nray.cpp numbertheory.cpp nmatrixint.cpp
+libmaths_la_SOURCES = approx.cpp matrixops.cpp nray.cpp numbertheory.cpp
 
 mathsinclude_HEADERS = approx.h matrixops.h nmatrix.h nmatrixfield.h nmatrixint.h nray.h numbertheory.h nvector.h nvectordense.h nvectormatrix.h nvectorunit.h
 
