@@ -33,6 +33,8 @@ Version 4.3.2  [ under development ]
               has been removed.
             - Made all member functions static.  Objects of this class
               can no longer be created.
+        Class NMatrixRing:
+            - New routine det() for fast calculation of matrix determinants.
         Class NPacket:
             - New routine reparent() to simplify ownership issues when
               using Python scripting.
